docs/admc/version-1.36/modules/en/pages/tutorials/verifying-kubewarden.adoc
include::partial$variables.adoc[]
= Verifying {admc-name}
:page-languages: [en, de, es, fr, ja, pt, zh]
:revdate: 2026-05-14
:page-revdate: {revdate}
:description: Verify different artifacts produced by the {admc-name} team to ensure a secure supply chain through use of SBOMs and provenance files.
:doc-persona: ["kubewarden-operator", "kubewarden-policy-developer", "kubewarden-integrator"]
:doc-topic: ["security", "verifying-kubewarden"]
:doc-type: ["tutorial"]
:keywords: ["kubewarden", "kubernetes", "security", "verification"]
:current-version: {page-origin-branch}

[NOTE]
====
Repository and image URIs used in this documentation page changed in v1.36. If
validating previous versions, refer to the documentation page for that version.
====

The {admc-name} stack provides different attestations and assurances:

- Provenance attestations: Inform of the build process, build dependencies, and aids in replicating the builds. Implement https://slsa.dev/spec/v1.0/[SLSA] Standard (level 3 in our case).
- SBOMs attestations: Contain the software dependencies. Help downstream consumers ascertain vulnerabilities of {admc-short-name} and its dependencies.
- Signed artifacts: Indicate if an artifact is authentic or not, providing supply chain security. This includes the deliverables, but also the provenance and SBOM attestations.

{admc-short-name} artifacts, provenance attestations and SBOMs are signed using https://docs.sigstore.dev[Sigstore],
with the keyless workflow. This means that the signing certificate contains the
following info, where `*` matches any following characters:

* issuer: `+https://token.actions.githubusercontent.com+`
* subject: `+https://github.com/kubewarden/*+`
* x509 certificate extension for GHA, "github_workflow_repository": `kubewarden/*`

[IMPORTANT]
====
Some examples in this tutorial use wildcard patterns (`\*`) in the
`--certificate-identity-regexp` cosign flag for simplicity. Broader patterns
like `\https://github.com/kubewarden/*` will match any workflow in any repository
under the `kubewarden` organization, which may be less restrictive than desired.

For a more secure verification, use `--certificate-identity` with a fully
qualified URL that includes the repository, workflow file, and version tag:

`\https://github.com/kubewarden/policy-server/.github/workflows/release.yml@refs/tags/v1.36.0`

This ensures only artifacts produced by that exact workflow and release are accepted.
====

[#container-images]
== Container images

To verify the keyless-signed container images produced by the {admc-short-name} team,
you can use the `cosign` CLI tool. For example, to verify the
`kubewarden/adm-controller/policy-server` image, you can execute the following command:

[source, console]
----
cosign verify ghcr.io/kubewarden/adm-controller/policy-server:v1.36.0 \
  --certificate-identity-regexp 'https://github.com/kubewarden/adm-controller/.github/workflows/release.ya?ml@refs/tags/v1.36.0' \
  --certificate-oidc-issuer https://token.actions.githubusercontent.com

Verification for ghcr.io/kubewarden/adm-controller/policy-server:v1.36.0 --
The following checks were performed on each of these signatures:
  - The cosign claims were validated
  - Existence of the claims in the transparency log was verified offline
  - The code-signing certificate was verified using trusted certificate authority certificates

<snipped json>
----

You can then verify that the certificate in the returned JSON contains the
correct issuer, subject, and `github_workflow_repository` extensions.

You can also verify with link:https://github.com/rancherlabs/slsactl[`slsactl`].
For example, for version 1.36.0:

[source, console]
----
slsactl verify ghcr.io/kubewarden/policy-server:v1.30.0
----

The same applies to all other images produced by the {admc-short-name} team,
such as `kubewarden/adm-controller` and `kubewarden/adm-controller/audit-scanner`.

All container images also have SBOM and provenance files that can be used to
ensure the secure supply chain of the images. You can find attestation files on
the release page of the component or attached to the container image in the OCI
registry.

We use Docker to build the images and their attestations. However, the cosign
command https://github.com/sigstore/cosign/issues/2688[does not yet support]
the verification of the attestations generated by Docker from the OCI registry.
For this reason, you need to download the files from the release page or the
registry and verify them locally. If you want to download the attestation files
from the OCI registry, you can follow the
https://docs.docker.com/build/metadata/attestations/attestation-storage/[Docker
documentation] and use tools like `crane` or `docker` itself to download the
files from the registry.

When downloading the attestation files from the release page of
the {admc-short-name} components, check them:

[,console]
----
$ cosign verify-blob --bundle audit-scanner-attestation-amd64-checksum-cosign.bundle \
    --certificate-oidc-issuer=https://token.actions.githubusercontent.com \
    --certificate-identity="https://github.com/kubewarden/adm-controller/.github/workflows/release.yml@refs/tags/v1.36.0" \
    policy-server-attestation-amd64-provenance.intoto.jsonl
Verified OK
----

Now that the files integrity is verified, you can inspect the SBOM and Provenance files.
You can get these from the container image, using link:https://github.com/rancherlabs/slsactl[`slsactl].
For example, for version 1.36.0:

[,console]
----
slsactl download provenance ghcr.io/kubewarden/adm-controller/policy-server:v1.36.0
slsactl download sbom ghcr.io/kubewarden/adm-controller/policy-server:v1.36.0
----

== Helm charts

You can find {admc-short-name} Helm charts in our `https://` traditional
Helm repository under https://charts.kubewarden.io.

The same Helm charts are signed via Sigstore's keyless signing, and pushed to an
OCI repository that holds both the Helm chart and its provenance attestation as OCI
artifacts.

The Helm charts are published alongside a https://hauler.dev[Hauler] manifest
that lists all needed artifacts.

=== Verifying with Hauler

Hauler automatically verifies the artifacts on download. For more information,
refer to xref:/howtos/airgap/03-hauler.adoc[our documentation].

=== Verifying manually

Since Helm 3.8.0, Helm has support for OCI registries, but because of
constraints in them, they can't be searched via `helm`. You can find the
https://github.com/orgs/kubewarden/packages?tab=packages&q=charts[list of charts in GitHub Container Registry].

To verify a Helm chart, you need `cosign` installed. Then execute the following
command, for example:

----
cosign verify ghcr.io/kubewarden/charts/kubewarden-defaults:3.14.0 \
  --certificate-identity-regexp 'https://github.com/kubewarden/helm-charts/*' \
  --certificate-oidc-issuer https://token.actions.githubusercontent.com

Verification for ghcr.io/kubewarden/charts/kubewarden-defaults:3.14.0 --
The following checks were performed on each of these signatures:
  - The cosign claims were validated
  - Existence of the claims in the transparency log was verified offline
  - The code-signing certificate was verified using trusted certificate authority certificates

<snipped json>
----

You can then verify that the cert in the returned json contains the correct
issuer, subject, and `github_workflow_repository` extensions.

The chart attestations are pushed to the OCI registry as an artifact layer. See the xref:#container-images[container images] section on how to verify them.

{admc-short-name} charts ship `imagelist.txt` and (`policylist.txt` when relevant) inside
of the chart. Hence, if you already verified the chart, you can use those lists
to verify the consumed container images and policies.

{admc-short-name} also follows the usual practices with regards to Helm charts. Hence, one
can also find all the images in the Helm charts with a plugin such as
https://github.com/cvila84/helm-image[helm-image], or with the following script:

[subs="+attributes",bash]
----
#!/usr/bin/env bash
helm pull --untar kubewarden/kubewarden-controller && \
helm pull --untar kubewarden/kubewarden-defaults && \
{ helm template ./kubewarden-controller; helm template ./kubewarden-defaults } \
    | yq '..|.image? | select(.)' \
    | sort -u | sed 's/"//g'
----

which gives us:

----
ghcr.io/kubewarden/adm-controller/controller:v1.36.0
ghcr.io/kubewarden/adm-controller/policy-server:v1.36.0
ghcr.io/kubewarden/adm-controller/audit-scanner:v1.36.0
ghcr.io/rancher/kuberlr-kubectl:v8.0.0
----

Now, for each image in that list you can verify their Sigstore signatures following the instructions from the xref:#container-images[previous section].

== kwctl

kwctl binaries are signed using https://docs.sigstore.dev/cosign/signing/signing_with_blobs/[Sigstore's blob signing].

When you download a https://github.com/kubewarden/adm-controller/releases/[`kwctl`
release] each zip file contains
a Sigstore bundle file that you can use for verification: `kwctl-*bundle.sigstore`.

In order to verify kwctl you need cosign installed, and then execute the
following command:

----
cosign verify-blob \
  --bundle kwctl-linux-x86_64.bundle.sigstore \
  --certificate-identity-regexp 'https://github.com/kubewarden/adm-controller/.github/workflows/build-kwctl.ya?ml@refs/tags/v*' \
  --certificate-oidc-issuer https://token.actions.githubusercontent.com \
  kwctl-linux-x86_64

Verified OK
----

You can then verify that the cert in the returned json contains the correct
issuer, subject, and `github_workflow_repository` extensions.

The SBOMs are signed and published in the
https://github.com/kubewarden/adm-controller/releases[GitHub Releases] of the project.

The provenance attestation for `kwctl` is verified by using
https://cli.github.com/manual/gh_attestation_verify[`gh attestation verify`]. For
example

[console]
----
$ gh attestation verify kwctl-linux-x86_64 --repo kubewarden/adm-controller
Loaded digest sha256:b22755eeac497614b8ab6d182c2337a5de7c74080297a29b1d68434883bb36ff for file://kwctl-linux-x86_64
Loaded 2 attestations from GitHub API
✓ Verification succeeded!
sha256:b22755eeac497614b8ab6d182c2337a5de7c74080297a29b1d68434883bb36ff was attested by:
REPO                       PREDICATE_TYPE                  WORKFLOW
kubewarden/adm-controller  https://slsa.dev/provenance/v1  .github/workflows/build-kwctl.yml@refs/tags/v1.36.0
kubewarden/adm-controller  https://slsa.dev/provenance/v1  .github/workflows/build-kwctl.yml@refs/heads/main
----

== Policies

Policies maintained by the {admc-short-name} team are also signed using the Sigstore project. Similar to
usual container images, one can verify them using `cosign`:

----
cosign verify ghcr.io/kubewarden/policies/verify-image-signatures:v0.2.5 \
  --certificate-identity-regexp 'https://github.com/kubewarden/*' \
  --certificate-oidc-issuer https://token.actions.githubusercontent.com

Verification for ghcr.io/kubewarden/policies/verify-image-signatures:v0.2.5 --
The following checks were performed on each of these signatures:
  - The cosign claims were validated
  - Existence of the claims in the transparency log was verified offline
  - The code-signing certificate was verified using trusted certificate authority certificates

  <snipped json>
----

You can then verify that the cert in the returned json contains the correct
issuer, subject, and `github_workflow_repository` extensions.
